[gd_scene load_steps=2 format=3 uid="uid://cyydgabf8fbwi"]

[ext_resource type="Script" uid="uid://dxvp8oelhxyhm" path="res://scenes/save_select.gd" id="1_bxlp5"]

[node name="SaveSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bxlp5")

[node name="SaveMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 81
theme_override_constants/margin_bottom = 81

[node name="SaveContainer" type="VBoxContainer" parent="SaveMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 96

[node name="SaveSlot1" type="Button" parent="SaveMarginContainer/SaveContainer"]
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 5
theme_override_constants/line_spacing = 24
text = "Save Slot 1
"

[node name="SaveSlot2" type="Button" parent="SaveMarginContainer/SaveContainer"]
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/line_spacing = 24
text = "Save Slot 2
"

[node name="SaveSlot3" type="Button" parent="SaveMarginContainer/SaveContainer"]
custom_minimum_size = Vector2(384, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 5
theme_override_constants/line_spacing = 24
text = "Save Slot 3
"
